implementando injeção specification
